<resources>
    <string name="app_name">foodhunter</string>
    <string name="try_app">TRY APP</string>
    <string name="log_in">LOG IN</string>
    <string name="log_in_fb">LOG IN WITH FACEBOOK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="don_t_have_a_account">Don’t have a account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait...</string>
    <string name="nama_user">Nama Pengguna</string>
    <string name="email">E-Mail Pengguna</string>
    <string name="btnBack">Back</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btnBrowse">Browse</string>
    <string name="btnLike">Like</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fav_food">Favorite food</string>
    <string name="archivment">Archivment</string>
    <string name="asd">asd</string>
    <string name="btnList">Food</string>
    <string name="notif_detail_store_fail">Toko tidak ditemukan</string>
    <string name="notif_all_food_fail">Makanan gagal di loading</string>
    <string name="notif_all_store_fail">Gagal menampilkan keseluruhan toko</string>
    <string name="login_fail">username atau password salah silahkan coba lagi</string>
    <string name="wellcome">Selamat Datang,</string>
    <string name="register_fail">Registrasi gagal silahkan coba lagi</string>
    <string name="ERROR_USERNAME_EMPTY">Username tidak boleh kosong</string>
    <string name="ERROR_USERNAME_MIN">Username tidak boleh kurang dari 6 karakter</string>
    <string name="ERROR_PASSWORD_EMPTY">Password tidak boleh kosong</string>
    <string name="ERROR_EMAIL_EMPTY">Email tidak boleh kosong</string>
    <string name="ERROR_EMAIL_FALSE">Email tidak sesuai format</string>
</resources>
