<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="300dp"
        android:paddingLeft="44dp"
        android:paddingRight="44dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/shape_text_field"
            android:layout_marginBottom="21dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline_text"
                android:textColor="@color/textDark"
                android:id="@+id/txtUsername"
                android:textColorHint="@color/textDarkHint"
                android:hint="@string/username"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:hint="@string/password"
                android:background="@drawable/non_underline_text"
                android:textColorHint="@color/textDarkHint"
                android:textColor="@color/textDark"
                android:inputType="textPassword" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@color/TextRed"
            android:textSize="17dp"
            android:id="@+id/btnLogin"
            android:text="@string/log_in"
            android:layout_marginBottom="21dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/textWhite"
                android:text="@string/don_t_have_a_account"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnRegister"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite"
                android:background="@drawable/dotted"
                android:text="@string/register"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
